Uniformato layout e background.

--- a/res/layout/activity_main_quiz.xml
+++ b/res/layout/activity_main_quiz.xml
@@ -1,37 +1,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/ivreaGray" >
 
+    <ImageView
+        android:id="@+id/bgQuizPlace"
+        android:contentDescription="@string/app_name"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/place_castellazzo_bg"
+        android:scaleType="fitEnd"
+        android:alpha=".50" />   
+     
+    
+    
     <TextView
         android:id="@+id/homeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="15dp"
         android:text="@string/hello_main"
+        android:textSize="30sp"
         tools:context=".MainQuizActivity" />
-
-     <TextView
-        android:id="@+id/DescrText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/homeText"
-        android:text="@string/quiz_descr"
-        tools:context=".MainQuizActivity" />
-    
-    <Button
-        android:id="@+id/videoPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="27dp"
-        android:layout_marginLeft="70dp"
-        android:background="@drawable/orange_button"
-        android:text="@string/videoPlay" />
 
     <Button
         android:id="@+id/gamePlay"
@@ -39,9 +35,30 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/videoPlay"
         android:layout_alignBottom="@+id/videoPlay"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="58dp"
+        android:layout_alignRight="@+id/DescrText"
+        android:layout_marginRight="73dp"
         android:background="@drawable/orange_button"
         android:text="@string/gamePlay" />
+
+    <Button
+        android:id="@+id/videoPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/DescrText"
+        android:layout_below="@+id/DescrText"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="54dp"
+        android:background="@drawable/orange_button"
+        android:text="@string/videoPlay" />
+
+    <TextView
+        android:id="@+id/DescrText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/homeText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/quiz_descr"
+        tools:context=".MainQuizActivity" />
 
 </RelativeLayout>
