--- a/res/layout/activity_quiz.xml
+++ b/res/layout/activity_quiz.xml
@@ -1,15 +1,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/ivreaGray" >
 
+    
+    <ImageView
+        android:id="@+id/bgQuizPlace"
+        android:contentDescription="@string/app_name"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/place_castellazzo_bg"
+        android:scaleType="fitEnd"
+        android:alpha=".25" />   
+    
     <TextView
         android:id="@+id/domandaText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="46dp"
+        android:gravity="center_horizontal"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -17,9 +33,9 @@
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/domandaText"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="17dp" >
+        android:layout_marginTop="42dp" >
 
         <RadioButton
             android:id="@+id/radio0"
