--- a/res/layout/place_activity.xml
+++ b/res/layout/place_activity.xml
@@ -24,46 +24,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
-			
-			<LinearLayout 
-			    android:id= "@+id/LLQuiz"	
-			    android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"              
-                android:orientation="vertical"  
-               	android:visibility="invisible"             
-			   >	
+        android:orientation="vertical" >  
 			  
-			  
-			    <FrameLayout
-                    android:layout_width="wrap_content"
+		  <FrameLayout
+			        android:id="@+id/LLQuiz"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal" 
+                    android:layout_gravity="center_vertical|center_horizontal" 
                     android:layout_marginStart="10dp"
-                     >
+                    android:layout_weight="1" 
+                    android:visibility="invisible">
 
-                    <com.mobsandgeeks.ui.TypefaceTextView
-                        android:id="@+id/balloonQuiz"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="@string/Quiz_baloon"                     
-                        android:textSize="20sp"
-                        geekui:customTypeface="fonts/rumpelstiltskin.ttf" />
-              
-			    </FrameLayout>
-            <ImageButton
+                   
+          	  <ImageButton
                 android:id="@+id/history_cloud"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_gravity="top|center_horizontal"
+                 android:layout_weight="1"
                 android:background="@drawable/history_button"             
                 android:contentDescription="@string/quiz"
-                android:onClick="goToQuiz" />
+                android:onClick="goToQuiz"                />
             
-            </LinearLayout>
-      
+			        
+           	  <com.mobsandgeeks.ui.TypefaceTextView
+                android:id="@+id/textView1"
+                android:layout_width="104dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/black"
+                android:text="@string/Quiz_baloon"
+                geekui:customTypeface="fonts/rumpelstiltskin.ttf" />
+                     
+  		 </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
