--- a/res/layout/activity_main_quiz.xml
+++ b/res/layout/activity_main_quiz.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ivreaGray" >
-
+    
     <ImageView
         android:id="@+id/bgQuizPlace"
         android:contentDescription="@string/app_name"
@@ -17,8 +17,7 @@
         android:scaleType="fitEnd"
         android:alpha=".50" />   
      
-    
-    
+           
     <TextView
         android:id="@+id/homeText"
         android:layout_width="wrap_content"
@@ -28,8 +27,19 @@
         android:text="@string/hello_main"
         android:textSize="30sp"
         tools:context=".MainQuizActivity" />
-
-    <Button
+    
+     <TextView
+        android:id="@+id/DescrText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/homeText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/quiz_descr"
+        tools:context=".MainQuizActivity" />
+     
+     
+     <Button
         android:id="@+id/gamePlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +48,8 @@
         android:layout_alignRight="@+id/DescrText"
         android:layout_marginRight="73dp"
         android:background="@drawable/orange_button"
-        android:text="@string/gamePlay" />
+        android:text="@string/gamePlay" 
+        android:onClick="play" />
 
     <Button
         android:id="@+id/videoPlay"
@@ -49,16 +60,42 @@
         android:layout_marginLeft="68dp"
         android:layout_marginTop="54dp"
         android:background="@drawable/orange_button"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
         android:text="@string/videoPlay" />
+    
+        <ProgressBar
+            android:id="@+id/mgTimerBarQuiz"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/DescrText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/homeText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:text="@string/quiz_descr"
-        tools:context=".MainQuizActivity" />
+        <TextView
+            android:id="@+id/mgTimerTextAQuiz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/mgTimerBarQuiz"
+            android:layout_alignLeft="@+id/homeText"
+            android:layout_marginBottom="17dp"
+            android:text="@string/next_game_in"
+            android:textColor="@android:color/white"
+            android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/mgTimerTextQuiz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/mgTimerTextAQuiz"
+            android:layout_alignBottom="@+id/mgTimerTextAQuiz"
+            android:layout_margin="5dp"
+            android:layout_marginRight="24dp"
+            android:layout_toLeftOf="@+id/gamePlay"
+            android:text="00:00"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:visibility="gone" />
+        
 </RelativeLayout>
