--- a/res/layout/place_activity.xml
+++ b/res/layout/place_activity.xml
@@ -11,7 +11,6 @@
 
     <ImageView
         android:id="@+id/bgPlace"
-        android:contentDescription="@string/app_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
@@ -19,8 +18,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/place_castellazzo_bg"
-        android:scaleType="centerCrop"
-        />
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,8 +39,8 @@
                 android:layout_gravity="bottom"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:orientation="vertical" 
-                android:visibility="invisible">
+                android:orientation="vertical"
+                android:visibility="invisible" >
 
                 <FrameLayout
                     android:layout_width="wrap_content"
@@ -82,8 +81,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
-                    android:orientation="vertical" 
-                    android:visibility="invisible">
+                    android:orientation="vertical"
+                    android:visibility="invisible" >
 
                     <FrameLayout
                         android:layout_width="wrap_content"
@@ -117,8 +116,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
-                    android:orientation="vertical" 
-                    android:visibility="invisible">
+                    android:orientation="vertical"
+                    android:visibility="invisible" >
 
                     <FrameLayout
                         android:layout_width="wrap_content"
@@ -152,8 +151,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:orientation="vertical" 
-                    android:visibility="invisible">
+                    android:orientation="vertical"
+                    android:visibility="invisible" >
 
                     <FrameLayout
                         android:layout_width="wrap_content"
@@ -180,6 +179,23 @@
                         android:background="@drawable/dia"
                         android:contentDescription="@string/otherTeam_baloon"
                         android:onClick="goToBattle" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/quiz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:orientation="vertical"
+                    android:visibility="invisible" >
+
+                    <ImageButton
+                        android:id="@+id/ButtonTeam1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:background="@drawable/history_button"
+                      android:onClick="goToBattle" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
