--- a/res/xml/places.xml
+++ b/res/xml/places.xml
@@ -61,6 +61,7 @@ Attraverso me puoi consultare la classifica, l’ho detto che prendo nota di tut
     <place
         id="8"
         name="Piazza Duomo"
+        quiz="true"
         bg="place_duomo_bg"
         latlng="45.468433, 7.875700" />
     <place
@@ -68,11 +69,12 @@ Attraverso me puoi consultare la classifica, l’ho detto che prendo nota di tut
         name="Piazza Castello"
         bg="place_castello_bg"
         latlng="45.467721, 7.874919"
+        quiz="true"
         minigame="UnderConstruction"
         minigame_bg="place_under_construction_bg"
         minigame_descr="Io sono il Generale, e davanti a me non puoi sgarrare! Sono il responsabile del mantenimento dell’ordine pubblico durante il Carnevale, conosco tutte le regole e le farò rispettare. 
         
-        A proposito…passando di qua puoi leggere il regolamento tutte le volte che ne avrai bisogno."
+        \nA proposito…passando di qua puoi leggere il regolamento tutte le volte che ne avrai bisogno."
         minigame_mask="generale" />
     <place
         id="10"
