--- a/res/layout/place_activity.xml
+++ b/res/layout/place_activity.xml
@@ -191,13 +191,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:orientation="vertical"
-                    android:visibility="invisible" >
+                    android:visibility="gone" >
 
                     <ImageButton
                         android:id="@+id/LLQuizBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
+                        android:layout_marginBottom="20dp"
                         android:background="@drawable/history_button"
                         android:onClick="goToQuiz" />
                 </LinearLayout>
