--- a/res/layout/start_minigame_activity.xml
+++ b/res/layout/start_minigame_activity.xml
@@ -15,11 +15,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="80"
-            android:orientation="horizontal"
-            android:padding="5dp" >
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/character2"
@@ -32,23 +31,37 @@
 
             <ScrollView
                 android:id="@+id/descrScrollView"
-                android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#99000000" >
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:background="#99000000"
+                android:fillViewport="false"
+                android:foregroundGravity="top"
+                android:scrollbarStyle="insideOverlay"
+                android:scrollbars="vertical"
+                android:textAlignment="gravity" >
 
                 <TextView
                     android:id="@+id/descrStartMinigame"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:gravity="center_vertical"
-                    android:padding="50dp"
+                    android:layout_gravity="top"
+                    android:enabled="true"
+                    android:fitsSystemWindows="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="50dp"
+                    android:paddingTop="10dp"
                     android:text="@string/ivrea_map_button_minigame"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
                     android:textStyle="italic" />
+
             </ScrollView>
         </LinearLayout>
 
